--- a/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj
+++ b/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj
@@ -144,14 +144,22 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>D:\opencv\build\x64\vc15\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world460.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <StackReserveSize>200000000</StackReserveSize>
+      <StackCommitSize>200000000</StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\secAreaChipCP_V1\OpenCV_Extension_Tool.h" />
+    <ClInclude Include="..\secAreaChipCP_V1\secAreaChipCP_lib.h" />
     <ClInclude Include="AOILib_SecAreaChipCP_V1.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\secAreaChipCP_V1\CPchipAlgo_V1_240625.cpp" />
+    <ClCompile Include="..\secAreaChipCP_V1\GeneralFunction_V1.cpp" />
+    <ClCompile Include="..\secAreaChipCP_V1\OpenCV_Extension_Tool.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -160,6 +168,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="AOILib_Chip_DLL.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
