--- a/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj.filters
+++ b/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClInclude Include="AOILib_SecAreaChipCP_V1.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="..\secAreaChipCP_V1\secAreaChipCP_lib.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="..\secAreaChipCP_V1\OpenCV_Extension_Tool.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -35,5 +44,19 @@
     <ClCompile Include="Source.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="..\secAreaChipCP_V1\CPchipAlgo_V1_240625.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="..\secAreaChipCP_V1\GeneralFunction_V1.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="..\secAreaChipCP_V1\OpenCV_Extension_Tool.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="AOILib_Chip_DLL.rc">
+      <Filter>資源檔</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
