--- a/secAreaChipCP_V1/secAreaChipCP_V1.vcxproj.filters
+++ b/secAreaChipCP_V1/secAreaChipCP_V1.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="secAreaChipCP_lib.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
+    <ClInclude Include="OpenCV_Extension_Tool.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GeneralFunction_V1.cpp">
@@ -31,6 +34,9 @@
     </ClCompile>
     <ClCompile Include="CPchipAlgo_V1_240625.cpp">
       <Filter>資源檔</Filter>
+    </ClCompile>
+    <ClCompile Include="OpenCV_Extension_Tool.cpp">
+      <Filter>來源檔案</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
