----------1.0.0.1---------- 1. 修正 Phil 回報 狀況

--- a/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj
+++ b/AOILib_Chip_DLL/AOILib_Chip_DLL.vcxproj
@@ -144,8 +144,10 @@
       <EnableUAC>false</EnableUAC>
       <AdditionalLibraryDirectories>D:\opencv\build\x64\vc15\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>opencv_world460.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <StackReserveSize>200000000</StackReserveSize>
-      <StackCommitSize>200000000</StackCommitSize>
+      <StackReserveSize>
+      </StackReserveSize>
+      <StackCommitSize>
+      </StackCommitSize>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
